--- a/src/pages/management/dashboard.scss
+++ b/src/pages/management/dashboard.scss
@@ -10,6 +10,7 @@
   margin-top: 2em;
   max-width: 100vw;
   overflow: none;
+  padding: 2em 0;
 
   .row {
     display: flex;
