--- a/src/pages/management/merchantManagement.scss
+++ b/src/pages/management/merchantManagement.scss
@@ -22,6 +22,11 @@
     flex-direction: column;
     gap: 2em;
 
+    @include md {
+      min-width: 0;
+      max-width: 100vw;
+    }
+
     .managementSearchWrapper {
       padding: 0 15%;
     }
